# FastAPI

./: .gitmodules  README.md  app.py  requirements.txt  usingKmeans.ipynb
.ipynb_checkpoints/: usingKmeans-checkpoint.ipynb
00.Learning-Concepts/: 01-Hello-World.py  02-get_method.py  README.md
01.Hello-FastAPI/: README.md
02.CRUD-FastAPI/: README.md
02.CRUD-FastAPI/models/: index.py
02.FastAPI-Auth/: README.md
03.CRUD-FastAPI/: README.md
04.Simple-LMS/: main.py  pyproject.toml
04.Simple-LMS/alembic/: env.py
04.Simple-LMS/alembic/data/: students.json
04.Simple-LMS/alembic/versions/: 3df795270731_.py
04.Simple-LMS/api/: cources.py  sections.py  users.py
04.Simple-LMS/db/: db_setup.py
04.Simple-LMS/db/models/: cource.py  mixins.py  user.py
Django-Projects/: README.md
Django-Projects/00.Learning-Concepts/: README.md
Django-Projects/01.Hello-Django/: README.md
Django-Projects/01.Hello-Django/first_app/: urls.py  views.py
Django-Projects/02.CRUD-Django/: README.md
Django-Projects/03.Django-Authentication/: README.md
Django-Projects/03.Storefront/: README.md
Django-Projects/04.drf-ecommerce/: README.md
FastAPI-Projects/01.Hello-FastAPI/: main.py
FastAPI-Projects/02.CRUD-FastAPI/config/: db.py
Flask-Projects/: README.md
Flask-Projects/01.Customer-Segmentation-ML/: README.md
Flask-Projects/01.Hello-Flask/: readme.md
Flask-Projects/02.CRUD-Flask/: README.md
storeapi/: Readme.md  main.py  requirements.txt
storeapi/models/: post.py
storeapi/routers/: post.py
storeapi/tests/: conftest.py
templates/: index.html  result.html
(+23 files in other folders)
