[tool.poetry]
name = "04-simple-lms"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "04"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.3"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.2"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
